--- a/index.html
+++ b/index.html
@@ -8,21 +8,21 @@
     <title>Data table</title>
   </head>
   <body>
-    <h1 class="text-3xl">Data Table</h1>
+    <h1 class="text-3xl">Personal Expense Tracker</h1>
 
     <div
-      class="w-10/12 m-auto border-2 border-gray-300 rounded-s-md overflow-hidden"
+      class="w-[1000px] m-auto border-2 border-gray-300 rounded-s-md overflow-hidden"
     >
-      <div class="flex bg-[#F4F7FC] p-2">
+      <div class="flex bg-[#F4F7FC] p-2 w-full">
         <div>filter</div>
         <div>search</div>
         <button class="ml-auto border-2 px-5 hover:cursor-pointer add-customer">
-          add customer
+          Add Expenses
         </button>
       </div>
 
       <div>
-        <table>
+        <table class="w-full">
           <thead>
             <tr class="bg-[#F4F7FC]">
               <th
@@ -32,19 +32,25 @@
                 <input type="checkbox" />
               </th>
               <th
-                class="border-b border-solid border-gray-400 px-2.5 py-5 text-start text-gray-700"
+                class="border-b border-solid border-gray-400 px-2.5 py-5 text-start"
                 scope="col"
               >
                 #
               </th>
               <th
-                class="border-b border-solid border-gray-400 px-2.5 py-5 text-start text-gray-600 font-semibold"
+                class="border-b border-solid border-gray-400 px-2.5 py-5 text-start font-semibold"
                 scope="col"
               >
-                Name
+                Date
               </th>
               <th
                 class="border-b border-solid border-gray-400 px-2.5 py-5 text-start"
+                scope="col"
+              >
+                Category
+              </th>
+              <th
+                class="border-b border-solid border-gray-400 px-2.5 py-5"
                 scope="col"
               >
                 Description
@@ -53,45 +59,36 @@
                 class="border-b border-solid border-gray-400 px-2.5 py-5"
                 scope="col"
               >
-                Status
+                Amount
               </th>
               <th
                 class="border-b border-solid border-gray-400 px-2.5 py-5"
                 scope="col"
               >
-                Rate
+                Payment
               </th>
               <th
                 class="border-b border-solid border-gray-400 px-2.5 py-5"
                 scope="col"
               >
-                Balance
-              </th>
-              <th
-                class="border-b border-solid border-gray-400 px-2.5 py-5"
-                scope="col"
-              >
-                Deposit
+                Actions
               </th>
             </tr>
           </thead>
-          <tbody>
-            <tr>
+          <tbody class="expenses_list">
+            <!-- <tr>
               <td class="px-2.5 py-3">
                 <input type="checkbox" />
               </td>
-              <td class="px-2.5 py-3">1</td>
-              <td class="px-2.5 py-3">Ann Culhane</td>
-              <td class="px-2.5 py-3 w-2/7">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                Nulla...
-              </td>
+              <td class="px-2.5 py-3 min-w-5">1</td>
+              <td class="px-2.5 py-3">2025-11-03</td>
+              <td class="px-5 py-3">Groceries</td>
 
-              <td class="px-2.5 py-3 text-center">open</td>
-              <td class="px-2.5 py-3 text-center">$70.00</td>
-              <td class="px-2.5 py-3 text-center">-$270.00</td>
-              <td class="px-2.5 py-3 text-center">-$500.00</td>
-            </tr>
+              <td class="px-2.5 py-3 text-center">Trader Joe’s</td>
+              <td class="px-2.5 py-3 text-center">$45.23</td>
+              <td class="px-2.5 py-3 text-center">Credit Card</td>
+              <td class="px-2.5 py-3 text-center">Edit/Delete</td>
+            </tr> -->
           </tbody>
         </table>
       </div>
