implement sorting amount and clearing the previously sorted col's sort indicator

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                   </svg>
                 </button>
                 <button
-                  class="btn-clear-date hidden cursor-pointer hover:text-blue-400"
+                  class="btn-clear-date clear-sort hidden cursor-pointer hover:text-blue-400"
                 >
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
@@ -112,12 +112,12 @@
               Description
             </th>
             <th
-              class="border-b border-solid border-gray-400 px-2.5 py-5"
+              class="border-b border-solid border-gray-400 px-2.5 py-5 col-amount"
               scope="col"
             >
               <div class="flex items-center">
                 <span>Amount</span>
-                <button class="cursor-pointer flex btn-sort-time">
+                <button class="cursor-pointer flex btn-sort-amount">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     viewBox="0 0 20 20"
@@ -145,7 +145,7 @@
                   </svg>
                 </button>
                 <button
-                  class="btn-clear-amount hidden cursor-pointer hover:text-blue-400"
+                  class="btn-clear-amount clear-sort hidden cursor-pointer hover:text-blue-400"
                 >
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
