Link sorting feature to the filtered(by sorting only the filtered list), reset the sort list when filter changes

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1 class="text-3xl">Personal Expense Tracker</h1>
 
     <div
-      class="w-[1300px] m-auto border-2 border-gray-300 rounded-s-md overflow-hidden"
+      class="w-[1300px] m-auto border-2 border-gray-300 rounded-s-md overflow-hidden my-8"
     >
       <div class="flex bg-[#F4F7FC] p-2 w-full">
         <!-- <div>filter</div> -->
