implement ExpenseItem Class to manage the current page items with all the applied filters&sorting state

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             id="Category"
             class="filter-category border border-gray-300 px-4 py-1 text-sm"
           >
-            <option value="All">All</option>
+            <option value="all">All</option>
           </select>
         </div>
         <p class="ml-2 bg-amber-300 items-selected"></p>
