--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/budget.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -12,7 +12,7 @@
     />
 
     <link href="/src/style.css" rel="stylesheet" />
-    <title>Data table</title>
+    <title>Expenses Tracker</title>
   </head>
   <body class="font-['Roboto'] py-5">
     <h1 class="">Expenses Tracker</h1>
