--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     />
 
     <link href="/src/style.css" rel="stylesheet" />
-    <title>Expenses Tracker</title>
+    <title>Expense Tracker</title>
   </head>
   <body class="font-['Roboto'] py-5">
-    <h1 class="">Expenses Tracker</h1>
+    <h1 class="">Expense Tracker</h1>
 
     <div class="">
       <div class="flex mb-3 gap-3">
