--- a/client/signin.html
+++ b/client/signin.html
@@ -12,6 +12,12 @@
     />
 
     <link href="/src/style.css" rel="stylesheet" />
+    <script>
+      const token = localStorage.getItem("accessToken");
+      if (token) {
+        window.location.href = "../dashboard.html";
+      }
+    </script>
     <script type="module" src="./src/signin.js"></script>
     <title>Expense Tracker | Login</title>
   </head>
